FWF-5720: [Bugfix] Fix for multiple UI issues
-Fixed UserSelect and SelectDropdown so that the Dropdown can render outside the MUI table
-Fixed paginated form heights to 450px
-Fixed vertical scroll in Submission view
-Fixed pagination not visible in Analyze submission page if rows are more than 10
-Fixed scrolling in Variable Module

--- a/forms-flow-theme/scss/_forms.scss
+++ b/forms-flow-theme/scss/_forms.scss
@@ -755,7 +755,7 @@ span.text-danger,
     
     .MuiDataGrid-virtualScroller {
       height: auto !important;
-      min-height: auto !important;
+      min-height: 450px !important;
       overflow: visible !important;
     }
     
