--- a/forms-flow-theme/scss/v8-scss/_table.scss
+++ b/forms-flow-theme/scss/v8-scss/_table.scss
@@ -308,6 +308,7 @@ $table-shadow: rgba(0, 0, 0, 0.25); // Shadow color
   //for submissions page temporarily used className
   .custom-table-wrapper-outter-submissions{
     container: tableSize / inline-size;
+    padding-bottom: 200px;
   }
 
 .notes-wrapper {
